fixed z-index of intro and fixed scroll bug from navigation menu

--- a/src/style.styl
+++ b/src/style.styl
@@ -79,11 +79,12 @@ nav
       font-size: 30px
 section
   width: 100vw
+  position relative
+  z-index: 1
 #intro
   position: fixed;
   top 0
   left 0
-  z-index: -1
   height: 100vh;
   display: flex;
   flex-flow: column;
@@ -101,6 +102,8 @@ section
   a
     margin-bottom: 50px
 #placeholder
+  position: relative
+  z-index: -1
   height 100vh
   margin-bottom: 5px
 #profile
